Description of InitialSurvivorRatio flag in globals.hpp is incorrect

XMLWordPrintable

    • gc
    • b55
    • generic
    • generic

        InitialSurvivorRatio flag described in globals.hpp as "Initial ratio of eden/survivor space size", where "eden" should be replaced with "young generation", because initial survivor size for PSYoungGen calculated as young_gen_size/InitialSurvivorRatio.

        Note that MinSurvivorRatio described correctly, as "Minimum ratio of young generation/survivor space size".

              Assignee:
              Per Liden (Inactive)
              Reporter:
              Filipp Zhinkin
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: