8024632: Description of InitialSurvivorRatio flag in globals.hpp is incorrect

Reviewed-by: brutisso, tschatzl, kmo, tamao